added backend functionality to parse params and use as criteria to find records in Staticresponsescontroller

--- a/app/views/staticresponses/show.html.erb
+++ b/app/views/staticresponses/show.html.erb
@@ -1,3 +1,6 @@
-<h1>StaticResponses#show</h1>
-<h3>So far so good</h3>
-<p>Find me in app/views/static_responses/show.html.erb</p>
+<h1>Firing...</h1>
+
+<p>
+  <%= @static_query.txt_query %>
+  <%= @static_response.txt_bp_1 %>
+</p>
