--- a/app/views/staticresponses/show.html.erb
+++ b/app/views/staticresponses/show.html.erb
@@ -1,6 +1,1 @@
-<h1>Firing...</h1>
-
-<p>
-  <%= @static_query.txt_query %>
-  <%= @static_response.txt_bp_1 %>
-</p>
+<div id="response-app" data-current-datetime="<%= @current_datetime %>" data-staticquery="<%= @static_query.to_json %>" data-staticresponse="<%= @static_response.to_json %>" data-staticresponsereferences="<%= @static_response_references.to_json %>"></div>
