added transitions and animations to simulate the application thinking

--- a/app/views/staticresponses/show.html.erb
+++ b/app/views/staticresponses/show.html.erb
@@ -1,1 +1,2 @@
 <div id="response-app" data-current-datetime="<%= @current_datetime %>" data-staticquery="<%= @static_query.to_json %>" data-staticresponse="<%= @static_response.to_json %>" data-staticresponsereferences="<%= @static_response_references.to_json %>"></div>
+<div id="response-search-bar"></div>
