--- a/app/javascript/styles/application.css
+++ b/app/javascript/styles/application.css
@@ -1,5 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap');
 
+@keyframes fadeUp {
+  from { opacity: 0; transform: translateY(6px); }
+  to { opacity: 1; transform: translateY(0); }
+}
+
 * {
   box-sizing: border-box;
 }
@@ -150,6 +155,34 @@ body {
   color: #000000;
 }
 
+/* animation approaches below */
+
+.react-response-static-response-content > p {
+  opacity: 0;
+  animation: fadeUp 3s ease forwards;
+}
+
+.react-response-static-response-content > p:nth-child(1) { animation-delay: 0ms; }
+.react-response-static-response-content > p:nth-child(2) { animation-delay: 120ms; }
+.react-response-static-response-content > p:nth-child(3) { animation-delay: 240ms; }
+
+.react-response-static-response-content > ul { animation-delay: 480ms; }
+
+.react-response-static-response-content > ul > li {
+  opacity: 0;
+  animation-name: fadeUp;
+  animation-duration: 5s;
+  animation-timing-function: ease;
+  animation-fill-mode: forwards;
+}
+
+.react-response-static-response-content > ul > li:nth-child(1) { animation-delay: 500ms; }
+.react-response-static-response-content > ul > li:nth-child(1) { animation-delay: 720ms; }
+.react-response-static-response-content > ul > li:nth-child(1) { animation-delay: 840ms; }
+.react-response-static-response-content > ul > li:nth-child(1) { animation-delay: 960ms; }
+
+/* animation approaches above ^^^ */
+
 .react-response-static-response-content > p {
   margin: 0;
 }
@@ -220,4 +253,55 @@ li {
   white-space: normal;
   word-wrap: break-word;
   margin-top: 0px;
+}
+
+.react-response-search-bar {
+  position: relative;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  margin-top: 100px;
+  gap: 8px;
+  padding: 0 1.5rem;
+  height: 30px;
+  border-radius: 9999px;
+}
+
+.react-response-search-bar_burger_icon {
+  position: absolute;
+  left: 425px;
+  top: 50%;
+  transform: translateY(-50%);
+  border: none;
+  background: none;
+  padding: 0;
+  cursor: pointer;
+  width: 40px;
+  height: 40px;
+}
+
+.react-response-search-bar_input {
+  width: 600px;
+  padding: 14px 42px 14px;
+  margin: 100px auto;
+  border: 1px;
+  font-size: 16px;
+  border-radius: 9999px;
+  background-color: #ECE6F0;
+}
+
+.react-response-search-bar_button {
+  position: absolute;
+  right: 425px;
+  top: 50%;
+  transform: translateY(-50%);
+  border: none;
+  background: none;
+  padding: 0;
+  cursor: pointer;
+}
+
+.react-response-search-bar_button > img {
+  width: 40px;
+  height: 40px;
 }
